<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuarios.registro.RegistroUsuarioView"
    android:orientation="vertical"
    android:padding="@dimen/padding_general">

    <TextView
        android:id="@+id/txtFormulario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_registro_title"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding_general">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_registro_textinput_layout_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_registro_nombre"
            android:layout_margin="20dp"
            android:textSize="20dp"
            android:textColor="@color/colorSecondaryText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_login_textinput_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_registro_email"
            android:layout_margin="20dp"
            android:textSize="20dp"
            android:textColor="@color/colorSecondaryText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_login_textinput_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_registro_password"
            android:layout_margin="20dp"
            android:textSize="20dp"
            android:textColor="@color/colorSecondaryText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btAceptar"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/activity_registro_aceptar"
        android:textColor="@color/colorWhite"
        android:textColorHighlight="@color/colorPrimaryLight"
        android:textSize="15dp"
        android:layout_gravity="center"/>

</LinearLayout>