<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuarios.login.LoginUsuarioView"
    android:orientation="vertical"
    android:padding="@dimen/padding_general">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/padding_general"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_login_textinput_layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_login_email"
            android:textColor="@color/colorSecondaryText"
            android:textSize="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_login_textinput_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="Password"
            android:textColor="@color/colorSecondaryText"
            android:textSize="20dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/padding_general">

        <Button
            android:id="@+id/btRegistro"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/activity_login_button_registro"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorPrimary"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginLeft="10dp"
            android:text="@string/activity_login_button_inicio_sesion"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorPrimary"
            android:textSize="15dp" />


    </LinearLayout>
</LinearLayout>